--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "@parcellab/js-plugin-utils",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Utils for using the parcelLab js plugin with different frameworks (react/vue)",
   "private": false,
-  "scripts": {},
+  "scripts": {
+    "build-react": "buble src/react/index.jsx > react.js --no moduleExport,moduleImport"
+  },
   "author": "@andruschka",
   "license": "MIT",
-  "dependencies": {
-    "common-dom-utils": "^2.0.1"
+  "peerDependencies": {
+    "react": "^16.0.2",
+    "react-dom": "^16.0.2"
+  },
+  "devDependencies": {
+    "@vue/cli-service": "^5.0.1",
+    "vue-template-compiler": "^2.6.14",
+    "buble": "^0.20.0"
   }
 }
