--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@parcellab/js-plugin-utils",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Utils for using the parcelLab js plugin with different frameworks (react/vue)",
   "private": false,
   "scripts": {
-    "build-react": "buble src/react/index.jsx > react.js --no moduleExport,moduleImport"
+    "unsafe-build-react": "buble src/react/index.jsx > react.js --no moduleExport,moduleImport",
+    "unsafe-build-vue": "npx vue-cli-service build --target lib src/vue/index.vue"
   },
   "author": "@andruschka",
   "license": "MIT",
