--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@parcellab/js-plugin-utils",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Utils for using the parcelLab js plugin with different frameworks (react/vue)",
   "private": false,
+  "main": "index.js",
   "scripts": {
-    "unsafe-build-react": "buble src/react/index.jsx > react.js --no moduleExport,moduleImport",
-    "unsafe-build-vue": "npx vue-cli-service build --target lib src/vue/index.vue"
+    "unsafe-build-react": "buble src/v3/react/index.jsx > lib/v3/react.js --no moduleExport,moduleImport",
+    "unsafe-build-vue": "npx vue-cli-service build --target lib src/v3/vue/index.vue && npm run prepare:vue-v3",
+    "prepare:vue-v3": "cp dist/js-plugin-utils.common.js lib/v3/vue.js"
   },
   "author": "@andruschka",
   "license": "MIT",
