--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "unsafe-build-react": "buble src/v3/react/index.jsx > v3/react/index.js --no moduleExport,moduleImport",
     "unsafe-build-react:v5": "buble src/v5/react/index.jsx > v5/react/index.js --no moduleExport,moduleImport",
     "unsafe-build-vue": "npx vue-cli-service build --target lib src/v3/vue/index.vue && npm run prepare:vue-v3",
-    "prepare:vue-v3": "cp dist/js-plugin-utils.common.js v3/vue/index.js"
+    "unsafe-build-vue:v5": "npx vue-cli-service build --target lib src/v5/vue/index.vue && npm run prepare:vue-v5",
+    "prepare:vue-v3": "cp dist/js-plugin-utils.common.js v3/vue/index.js",
+    "prepare:vue-v5": "cp dist/js-plugin-utils.common.js v5/vue/index.js"
   },
   "author": "@andruschka",
   "license": "MIT",
