--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Utils for using the parcelLab js plugin with different frameworks (react/vue)",
   "private": false,
   "files": [
+    "types/",
     "v3/",
     "v5/"
   ],
