--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^16.0.2 || ^18",
-    "react-dom": "^16.0.2 || ^18"
+    "react-dom": "^16.0.2 || ^18",
+    "vue": "^2"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.1",
