--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "peerDependencies": {
     "react": "^16.0.2 || ^18",
     "react-dom": "^16.0.2 || ^18",
-    "vue": "^2"
+    "vue": "^2 || ^3"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.1",
