--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "author": "@andruschka",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.0.2 || ^18",
-    "react-dom": "^16.0.2 || ^18",
+    "react": "^16.0.2 || ^17 || ^18",
+    "react-dom": "^16.0.2 || ^17 || ^18",
     "vue": "^3"
   },
   "devDependencies": {
