Add V5 and web-component (#2)
* chore: move v3 to its own folder

* chore: minor

* chore: add react v5

* chore: move stuff outside lib

* chore: more changes

* chore: not using assets

* chore: add v5

* chore: adjust v5

* chore: adjust vue v5

* chore: add web components - 1st iteration

* chore: add disable styles

* chore: update readme

* chore: add build step

* chore: more adjustments

* chore: minor

* chore: test adding ts support

* minor

* minor

* add TS declaration file

* readme update

* minor

* minor

* update readme

* add more typings

* update files for react

* small vue adjustments

* minor

* rebuild vue files

* minor

* added some d.ts for vue

* package.json add peerDep

* refactoring

* minor

* new update

* minor

* minor

* chore: add deployment pipeline

* chore: minor adjustments to readme and dependencies

* fix: web-component failed to construct customElem

* chore: new attempt to deploy

* chore: minor

* chore: new attempt

* chore: minor

* CI: remove unnecessary parts

* CI: simplify logic for now

* chore: remove testing part

* chore: updating readme

* chore: update TS definitions for v5

* CI: adjusting deployment pipeline

* chore: adding more documentation

* chore: minor adjusts

* chore: normalize files

--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "name": "@parcellab/js-plugin-utils",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Utils for using the parcelLab js plugin with different frameworks (react/vue)",
   "private": false,
+  "files": [
+    "v3/",
+    "v5/"
+  ],
   "scripts": {
-    "unsafe-build-react": "buble src/react/index.jsx > react.js --no moduleExport,moduleImport",
-    "unsafe-build-vue": "npx vue-cli-service build --target lib src/vue/index.vue"
+    "unsafe-build-react": "buble src/v3/react/index.jsx > v3/react/index.js --no moduleExport,moduleImport",
+    "unsafe-build-react:v5": "buble src/v5/react/index.jsx > v5/react/index.js --no moduleExport,moduleImport",
+    "unsafe-build-vue": "npx vue-cli-service build --target lib src/v3/vue/index.vue && npm run prepare:vue-v3",
+    "unsafe-build-vue:v5": "npx vue-cli-service build --target lib src/v5/vue/index.vue && npm run prepare:vue-v5",
+    "prepare:vue-v3": "cp dist/js-plugin-utils.common.js v3/vue/index.js",
+    "prepare:vue-v5": "cp dist/js-plugin-utils.common.js v5/vue/index.js"
   },
   "author": "@andruschka",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.0.2",
-    "react-dom": "^16.0.2"
+    "react": "^16.0.2 || ^17 || ^18",
+    "react-dom": "^16.0.2 || ^17 || ^18",
+    "vue": "^3"
   },
   "devDependencies": {
     "@vue/cli-service": "^5.0.1",
